DuPont DevSB/src/objects/sma__MASettingsGroup__c.object
<CustomObject>
    <fields>
        <fullName>sma__AllowExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__ButtonSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Button Set</label>
        <referenceTo>sma__MAButtonSet__c</referenceTo>
        <relationshipLabel>MapAnything Settings Groups</relationshipLabel>
        <relationshipName>MapAnything_Settings_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <description>MA Settings Group Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__EditableTooltips__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable Tooltips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__FolderAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Folder Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__HidePersonalFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Personal Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MaxExportSize__c</fullName>
        <label>Max Export Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MaxQuerySize__c</fullName>
        <label>Max Query Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Profile__c</fullName>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ShowUserFolders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show User Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__ShowWeather__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Weather</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnything_Settings_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Settings Group</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MapAnything Settings Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Settings Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>